fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,7 @@ button {
 .jumbo-banner-image {
   width: 100%;
   margin-right: -2rem;
+  z-index: -1;
 }
 
 
